<resources>

  <string name="app_name">Firebase Push Notification</string>

  <string name="channel_id" translatable="false">mydefaultchannelid</string>
  <string name="channel_name" translatable="false">mydefaultchannel</string>
  <string name="str_firebase_push_notification_demo">Firebase Push Notification Android Example</string>
  <string name="create_new_notification_channel">Create New Notification Channel</string>
  <string name="update_notification_channel">Update Notification Channel</string>
  <string name="delete_notification_channel">Delete Notification Channel</string>

</resources>
